# SRMModule

./: .gitignore  CMakeLists.txt
include/: placement.h
src/: .gitignore  CMakeLists.txt  Makefile  Placement.cpp  main  main.cpp  mem_daemon.cpp  placement.h
test/: CMakeLists.txt  main.cpp  test_mem_daemon.cpp  test_placement.cpp
