cmake_minimum_required (VERSION 3.25)
project (SRMModule)
add_subdirectory (src) 
add_subdirectory (test)
enable_testing ()
set(EXECUTABLE_OUTPUT_PATH ${SRMModule_SOURCE_DIR}/bin/ CACHE PATH "Bin directory" FORCE)
set(dir ${SRMModule_SOURCE_DIR}/build/)
set(LIBRARY_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${dir})
set(CMAKE_BUILD_FILES_DIRECTORY ${dir})
set(CMAKE_BUILD_DIRECTORY ${dir})
set(CMAKE_BINARY_DIR  ${dir})
SET(EXECUTABLE_OUTPUT_PATH ${dir})
SET(LIBRARY_OUTPUT_PATH ${dir})
SET(CMAKE_CACHEFILE_DIR ${dir})
add_test (NAME MyTest COMMAND Test)